--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
 
 <form action="mailto:Joeypeck1987@gmail.com" method="post" enctype="text/plain">
 	<label for="name">Please enter your name:</label>
-	<input type="text" name="name" id="name" placeholder="Enter your name" required><br>
+	<input type="text" name="name" id="name" placeholder="Name" required><br>
 	<label for="email">Please enter your email:</label>
-	<input type="email" name="email" id="email" placeholder="Enter your email" required><br>
+	<input type="email" name="email" id="email" placeholder="Email" required><br>
 	<label>Your Message:</label><br>
 	<textarea name="message" rows="6" cols="36" placeholder="Please enter your message here"></textarea><br>
 	<button>Submit</button>
