--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,10 @@
 	<title>Joey's Contact Info</title>
 </head>
 <body>
-	<h1>Joseph Peck</h1> 
-		<h2><p><em>Contact Details</em></p></h2>
-		<hr>
+	<h1>Joseph Peck</h1>
+	<fieldset>
+		<legend><h2><p><em>Contact Details</em></p></h2></legend>
+		
 <address>
 	<p><a href="mailto:Joeypeck1987@gmail.com">Joeypeck1987@gmail.com</a></p>
 	<p>7414 Elgin Ave. Lubbock Texas 79423</p>
@@ -22,6 +23,7 @@
 	<label>Your Message:</label><br>
 	<textarea name="message" rows="6" cols="36" placeholder="Please enter your message here"></textarea><br>
 	<button>Submit</button>
+	</fieldset>
 </form>
 <hr>
 <center>
