--- a/index.html
+++ b/index.html
@@ -47,11 +47,19 @@
 		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
 		<td>CSS:</td>
 		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
-	</tr>
-	<tr>
+		<td>Bootstrap:</td>
+		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
 		<td>Javascript:</td>
 		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
-		<td>Bootstrap:</td>
+	</tr>
+	<tr>
+		<td>Python:</td>
+		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
+		<td>Ruby:</td>
+		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
+		<td>Java:</td>
+		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
+		<td>C#:</td>
 		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
 	</tr>
 </table>
