--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <small>
 <a href="hobbies.html">Hobbies</a> |
 <a href="contact.html">Contact me</a> |
-<a href="#">Projects</a>
+<a href="projectindex.html">Projects</a>
 </small>
 </center>
 </body>
