--- a/hobbies.html
+++ b/hobbies.html
@@ -18,10 +18,12 @@
 	</li>
 </ol>
 <hr>
+
 <center>
 <small>
 <a href="index.html">Home</a> |
-<a href="contact.html">Contact</a>
+<a href="contact.html">Contact</a> |
+<a href="projectindex.html">Projects</a>
 </small>
 </center>
 </body>
