--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,12 @@
 	<button>Submit</button>
 </form>
 </fieldset>
+
 <center>
 <small>
 <a href="index.html">Home</a> |
-<a href="hobbies.html">Hobbies</a>
+<a href="hobbies.html">Hobbies</a> |
+<a href="projectindex.html">Projects</a>
 </small>
 <center>
 </body>
