--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Joey's Contact Info</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
 	<h1>Joseph Peck</h1>
@@ -26,12 +28,12 @@
 </form>
 </fieldset>
 
-<center>
+
 <small>
-<a href="index.html">Home</a> |
-<a href="hobbies.html">Hobbies</a> |
+<a href="index.html">Home</a> 
+<a href="hobbies.html">Hobbies</a> 
 <a href="projectindex.html">Projects</a>
 </small>
-<center>
+
 </body>
 </html>
