--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Joey's Hobbies</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
 <h1>Here is a list of my hobbies</h1>
@@ -19,12 +21,12 @@
 </ol>
 <hr>
 
-<center>
+
 <small>
-<a href="index.html">Home</a> |
-<a href="contact.html">Contact</a> |
+<a href="index.html">Home</a> 
+<a href="contact.html">Contact</a> 
 <a href="projectindex.html">Projects</a>
 </small>
-</center>
+
 </body>
 </html>
