--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Joseph Peck</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
 <table cellspacing="2">
@@ -65,12 +67,12 @@
 </table>
 <hr>
 
-<center>
+
 <small>
-<a href="hobbies.html">Hobbies</a> |
-<a href="contact.html">Contact me</a> |
+<a href="hobbies.html">Hobbies</a> 
+<a href="contact.html">Contact me</a> 
 <a href="projectindex.html">Projects</a>
 </small>
-</center>
+
 </body>
 </html>
