--- a/projectindex.html
+++ b/projectindex.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Projects</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
 <fieldset>
@@ -12,12 +14,12 @@
 	</ul>
 </div>
 </fieldset>
-<center>
+
 <small>
-<a href="index.html">Home</a> |
-<a href="hobbies.html">Hobbies</a> |
+<a href="index.html">Home</a> 
+<a href="hobbies.html">Hobbies</a> 
 <a href="contact.html">Contact me</a>
 </small>
-</center>
+
 </body>
 </html>
