--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </tr>
 
 </table>
-<hr>
+<hr class="one">
 <h3>Work Experience</h3>
 <table>
 	<thead>
@@ -41,7 +41,7 @@
 		</tr>
 	</tbody>
 	</table>
-	<hr>
+	<hr class="two">
 <h3>Skills</h3>
 <table cellspacing="5">
 	<tr>
@@ -65,14 +65,14 @@
 		<td><meter value="5" min="0" max="10" title="5 out of 10">5 out of 10</meter></td>
 	</tr>
 </table>
-<hr>
+<hr class="three">
 
-
+<div class="lin">
 <small>
 <a href="hobbies.html">Hobbies</a> 
 <a href="contact.html">Contact me</a> 
 <a href="projectindex.html">Projects</a>
 </small>
-
+</div>
 </body>
 </html>
