--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<title>Joey's Hobbies</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-
 </head>
 <body>
 <h1>Here is a list of my hobbies</h1>
@@ -20,13 +19,13 @@
 	</li>
 </ol>
 <hr>
-
-
+<hr class="two">
+<center>
 <small>
 <a href="index.html">Home</a> 
 <a href="contact.html">Contact</a> 
 <a href="projectindex.html">Projects</a>
 </small>
-
+</center>
 </body>
 </html>
