--- a/projectindex.html
+++ b/projectindex.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-
 </head>
 <body>
 <fieldset>
@@ -14,12 +13,13 @@
 	</ul>
 </div>
 </fieldset>
-
+<hr class="three">
+<center>
 <small>
 <a href="index.html">Home</a> 
 <a href="hobbies.html">Hobbies</a> 
 <a href="contact.html">Contact me</a>
 </small>
-
+</center>
 </body>
 </html>
