--- a/projects/raceregistration.html
+++ b/projects/raceregistration.html
@@ -43,9 +43,9 @@
 </form>
 <center>
 <small>
-<a href="../index.html">Home</a> |
-<a href="../hobbies.html">Hobbies</a> |
-<a href="../contact.html">Contact me</a> |
+<a href="../index.html">Home</a>/ 
+<a href="../hobbies.html">Hobbies</a>/ 
+<a href="../contact.html">Contact me</a>/ 
 <a href="../projectindex.html">Projects</a>
 </small>
 </center>
