--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,9 @@
 	<meta charset="utf-8">
 	<title>Joey's Contact Info</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-
 </head>
 <body>
-	<h1>Joseph Peck</h1>
+	<h1>Joseph Peck</h1> 
 	<fieldset>
 		<legend><h2><p><em>Contact Details</em></p></h2></legend>
 		
@@ -19,21 +18,21 @@
 
 <form action="mailto:Joeypeck1987@gmail.com" method="post" enctype="text/plain">
 	<label for="name">Please enter your name:</label>
-	<input type="text" name="name" id="name" placeholder="Name" required><br>
+	<input type="text" name="name" id="name"><br>
 	<label for="email">Please enter your email:</label>
-	<input type="email" name="email" id="email" placeholder="Email" required><br>
+	<input type="email" name="email" id="email"><br>
 	<label>Your Message:</label><br>
-	<textarea name="message" rows="6" cols="36" placeholder="Please enter your message here"></textarea><br>
+	<textarea name="message" rows="6" cols="36"></textarea><br>
 	<button>Submit</button>
 </form>
 </fieldset>
-
-
+<hr class="one">
+<center>
 <small>
 <a href="index.html">Home</a> 
 <a href="hobbies.html">Hobbies</a> 
 <a href="projectindex.html">Projects</a>
 </small>
-
+<center>
 </body>
 </html>
