--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
 <hr class="one">
 <center>
 <small>
-<a href="index.html">Home</a> 
-<a href="hobbies.html">Hobbies</a> 
+<a href="index.html">Home</a> /
+<a href="hobbies.html">Hobbies</a> /
 <a href="projectindex.html">Projects</a>
 </small>
 <center>
