--- a/hobbies.html
+++ b/hobbies.html
@@ -22,8 +22,8 @@
 <hr class="two">
 <center>
 <small>
-<a href="index.html">Home</a> 
-<a href="contact.html">Contact</a> 
+<a href="index.html">Home</a> /
+<a href="contact.html">Contact</a> /
 <a href="projectindex.html">Projects</a>
 </small>
 </center>
