--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
 <div class="lin">
 <small>
-<a href="hobbies.html">Hobbies</a> 
-<a href="contact.html">Contact me</a> 
+<a href="hobbies.html">Hobbies</a> /  
+<a href="contact.html">Contact me</a> /
 <a href="projectindex.html">Projects</a>
 </small>
 </div>
