--- a/projectindex.html
+++ b/projectindex.html
@@ -16,8 +16,8 @@
 <hr class="three">
 <center>
 <small>
-<a href="index.html">Home</a> 
-<a href="hobbies.html">Hobbies</a> 
+<a href="index.html">Home</a> /
+<a href="hobbies.html">Hobbies</a> /
 <a href="contact.html">Contact me</a>
 </small>
 </center>
